SourceMetaData/src/objects/InboundEmailAddressMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>A list of the inbound email addresses that will be directed to salesforce together with the case record type that should be created for them and who they should be assigned to.</description>
    <fields>
        <fullName>Assigned_to_Queue_ID__c</fullName>
        <description>The ID of the queue to which the newly created case should be assigned to</description>
        <inlineHelpText>The ID of the queue to which the newly created case should be assigned to</inlineHelpText>
        <label>Assigned to Queue ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type_Id__c</fullName>
        <description>when a case is created set its record type ID equal to this value</description>
        <inlineHelpText>when a case is created set its record type ID equal to this value</inlineHelpText>
        <label>Case Record Type Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Addr__c</fullName>
        <description>The email address that has been sent to.</description>
        <inlineHelpText>The email address that has been sent to.</inlineHelpText>
        <label>To Addr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inbound Email Address Mapping</label>
</CustomObject>